--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -10,30 +10,31 @@
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@mdi/font": "^6.5.95",
-    "@vue/composition-api": "^1.4.9",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "moment": "^2.29.1",
-    "vue": "^2.6.14",
-    "vue-cookie": "^1.1.4",
-    "vue-router": "^3.5.3",
-    "vuejs-logger": "^1.5.5",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "pinia": "^2.0.28",
+    "vee-validate": "^4.7.3",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6",
+    "vuejs3-logger": "^1.0.0",
+    "vuetify": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.2.45",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.20",
     "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "sass-loader": "^10.4.1",
+    "tailwindcss": "^3.2.4"
   },
   "eslintConfig": {
     "root": true,
