--- a/frontend-vue/.vscode/launch.json
+++ b/frontend-vue/.vscode/launch.json
@@ -2,28 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "pwa-chrome",
             "request": "launch",
-            "name": "vuejs: chrome",
+            "name": "Launch Chrome against localhost",
             "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/src",
-            "breakOnLoad": true,
-            "sourceMapPathOverrides": {
-                "webpack://schwarmplaner/src/*": "${webRoot}/*",
-            }
-        },
-        {
-            "type": "firefox",
-            "request": "launch",
-            "name": "vuejs: firefox",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/src",
-            "pathMappings": [
-                {
-                    "url": "webpack://schwarmplaner/src/",
-                    "path": "${webRoot}/"
-                }
-            ]
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
